fix: update background color in contact and styles for improved visibility

--- a/contact.css
+++ b/contact.css
@@ -101,7 +101,7 @@ body{
     top: 60px;
     height: 0;
     width: 300px;
-    background: rgba(27, 40, 221, 0.616);
+    background: rgb(19, 23, 83);
     backdrop-filter: blur(100px);
     border-radius: 10px;
     overflow: hidden;
